[package]
name = "scratch"
version = "1.0.2"
authors = ["David Tolnay <dtolnay@gmail.com>"]
build = "build.rs"
categories = ["development-tools::build-utils", "filesystem"]
description = "Compile-time temporary directory shared by multiple crates and erased by `cargo clean`"
documentation = "https://docs.rs/scratch"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/dtolnay/scratch"
rust-version = "1.0"

[dev-dependencies]
fs2 = "0.4"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
